--- a/mybatis-plus-ext-example-condition-annotation/src/main/resources/application-dev.yml
+++ b/mybatis-plus-ext-example-condition-annotation/src/main/resources/application-dev.yml
@@ -13,7 +13,6 @@ spring:
     url: "jdbc:h2:mem:test_db"
     username: root
     password:
-    schema: "classpath:db/schema.sql"
     #data: "classpath:db/data.sql"
   h2:
     console:
@@ -22,6 +21,9 @@ spring:
       settings:
         trace: false
         web-allow-others: false
+  sql:
+    init:
+      schema-locations: "classpath:db/schema.sql"
 
 logging:
   level:
