--- a/mybatis-plus-ext-example-condition-annotation/src/main/resources/application.yml
+++ b/mybatis-plus-ext-example-condition-annotation/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
     name: "mybatis-plus-ext-example-condition-annotation"
   profiles:
     active: dev
-  #datasource:
+    #datasource:
     # driver-class-name: "com.mysql.cj.jdbc.Driver"
     #url: "jdbc:mysql://${local.config.mysql.host}:${local.config.mysql.port}/${local.config.mysql.database}?useUnicode=true&characterEncoding=UTF-8"
     #username: ${local.config.mysql.username}
@@ -20,12 +20,9 @@ mybatis-plus:
     call-setters-on-nulls: true
   global-config:
     db-config:
-      id-type: id_worker
+      id-type: ASSIGN_ID
       table-prefix: sys_
-      capital-mode: true
-    db-column-underline: true
-    field-strategy: 2
-    refresh-mapper: true
+      capital-mode: false
   check-config-location: true
   mapper-locations: classpath:mapper/*.xml
   type-aliases-package: com.photowey.mybatisplus.ext.condition.domain.entity
@@ -33,3 +30,5 @@ mybatis-plus:
 logging:
   pattern:
     console: '%red(%d{yyyy-MM-dd HH:mm:ss.SSS}) %red([${spring.application.name}]) %green([%thread]) %highlight(%-5level) %boldMagenta(%logger) - %cyan(%msg%n)'
+  level:
+    com.photowey.mybatisplus.ext.annotation.repository: debug
