--- a/mybatis-plus-ext-example-mapper/src/main/resources/application-dev.yml
+++ b/mybatis-plus-ext-example-mapper/src/main/resources/application-dev.yml
@@ -13,7 +13,6 @@ spring:
     url: "jdbc:h2:mem:test_db"
     username: root
     password:
-    schema: "classpath:db/schema.sql"
     #data: "classpath:db/data.sql"
   h2:
     console:
@@ -22,13 +21,10 @@ spring:
       settings:
         trace: false
         web-allow-others: false
-
-mybatis-plus:
-  ext:
-    db-type: H2
-    overflow: true
-    use-deprecated-executor: false
+  sql:
+    init:
+      schema-locations: "classpath:db/schema.sql"
 
 logging:
   level:
-    "com.photowey.mybatisplus.ext.mapper.repository": debug
+    "com.photowey.mybatisplus.ext.condition.repository": debug
