--- a/mybatis-plus-ext-example-query/src/main/resources/application.yml
+++ b/mybatis-plus-ext-example-query/src/main/resources/application.yml
@@ -20,15 +20,12 @@ mybatis-plus:
     call-setters-on-nulls: true
   global-config:
     db-config:
-      id-type: id_worker
+      id-type: ASSIGN_ID
       table-prefix: sys_
-      capital-mode: true
-    db-column-underline: true
-    field-strategy: 2
-    refresh-mapper: true
+      capital-mode: false
   check-config-location: true
   mapper-locations: classpath:mapper/*.xml
-  type-aliases-package: com.photowey.mybatisplus.ext.query.domain.entity
+  type-aliases-package: com.photowey.mybatisplus.ext.meta.domain.entity
 
 logging:
   pattern:
