--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.6.2</version>
+        <version>2.7.5</version>
     </parent>
 
     <groupId>com.photowey</groupId>
@@ -28,18 +28,18 @@
         <module>mybatis-plus-ext-example-web</module>
     </modules>
 
+    <!-- @formatter:off -->
     <properties>
         <java.version>11</java.version>
 
-        <mybatis-plus.version>3.4.2</mybatis-plus.version>
-        <mybatis-typehandlers-jsr310.version>1.0.2
-        </mybatis-typehandlers-jsr310.version>
+        <mybatis-plus.version>3.5.2</mybatis-plus.version>
+        <mybatis-typehandlers-jsr310.version>1.0.2</mybatis-typehandlers-jsr310.version>
         <jackson-datatype-jsr310.version>2.9.7</jackson-datatype-jsr310.version>
         <druid.version>1.2.8</druid.version>
 
-        <mybatis-plus-ext-starter.version>1.0.0-SNAPSHOT
-        </mybatis-plus-ext-starter.version>
+        <mybatis-plus-ext-starter.version>1.5.0</mybatis-plus-ext-starter.version>
     </properties>
+    <!-- @formatter:on -->
 
     <dependencyManagement>
         <dependencies>
@@ -85,6 +85,7 @@
                 <groupId>com.photowey</groupId>
                 <artifactId>mybatis-plus-ext-starter</artifactId>
                 <version>${mybatis-plus-ext-starter.version}</version>
+                <type>pom</type>
             </dependency>
 
             <dependency>
